appId: com.example.example
tags:
  - passing
---
- launchApp:
    clearState: true

- tapOn: 'Input/Keyboard'
- tapOn:
    id: 'textInput'
- inputRandomCountryName

- assertNotVisible: 'Test Input Field'
- assertVisible: 
    id: textInput
    text: .+